# ADBenchmark

./: .gitignore  CMakeLists.txt  README.md  clean-build.sh  generate_asm.sh  run.sh  setup.sh
analyze/: analyze.py
benchmark/: CMakeLists.txt  counting_iterator.hpp  gradient.hpp  log_sum_exp.hpp  main.cpp  matrix_product.hpp  normal_log_pdf.hpp  prod.hpp  prod_iter.hpp  regression.hpp  result.hpp  run_test.hpp  stochastic_volatility.hpp  sum.hpp  sum_iter.hpp  testpack.hpp
benchmark/adept/: CMakeLists.txt  driver.hpp  log_sum_exp.cpp  matrix_product.cpp  normal_log_pdf.cpp  prod.cpp  prod_iter.cpp  regression.cpp  stochastic_volatility.cpp  sum.cpp  sum_iter.cpp
benchmark/adolc/: .adolcrc  CMakeLists.txt  driver.hpp  log_sum_exp.cpp  matrix_product.cpp  normal_log_pdf.cpp  prod.cpp  prod_iter.cpp  regression.cpp  stochastic_volatility.cpp  sum.cpp  sum_iter.cpp
benchmark/baseline/: CMakeLists.txt  driver.hpp  log_sum_exp.cpp  matrix_product.cpp  normal_log_pdf.cpp  prod.cpp  prod_iter.cpp  regression.cpp  stochastic_volatility.cpp  sum.cpp  sum_iter.cpp
benchmark/cppad/: CMakeLists.txt  driver.hpp  log_sum_exp.cpp  matrix_product.cpp  normal_log_pdf.cpp  prod.cpp  prod_iter.cpp  regression.cpp  stochastic_volatility.cpp  sum.cpp  sum_iter.cpp
benchmark/fastad/: CMakeLists.txt  driver.hpp  log_sum_exp.cpp  matrix_product.cpp  normal_log_pdf.cpp  prod.cpp  prod_iter.cpp  regression.cpp  stochastic_volatility.cpp  sum.cpp  sum_iter.cpp
benchmark/functor/: functor_base.hpp  gradient.hpp  log_sum_exp.hpp  matrix_product.hpp  normal_log_pdf.hpp  prod.hpp  prod_iter.hpp  regression.hpp  run_test.hpp  stochastic_volatility.hpp  sum.hpp  sum_iter.hpp
benchmark/sacado/: CMakeLists.txt  driver.hpp  log_sum_exp.cpp  matrix_product.cpp  normal_log_pdf.cpp  prod.cpp  prod_iter.cpp  regression.cpp  stochastic_volatility.cpp  sum.cpp  sum_iter.cpp
benchmark/stan/: CMakeLists.txt  driver.hpp  log_sum_exp.cpp  matrix_product.cpp  normal_log_pdf.cpp  prod.cpp  prod_iter.cpp  regression.cpp  stochastic_volatility.cpp  sum.cpp  sum_iter.cpp
benchmark/util/: check_gradient.hpp  stopwatch.hpp
docs/data/: log_sum_exp.csv  log_sum_exp_eval.csv  matrix_product.csv  matrix_product_eval.csv  normal_log_pdf.csv  normal_log_pdf_eval.csv  prod.csv  prod_eval.csv  prod_iter.csv  prod_iter_eval.csv  regression.csv  regression_eval.csv  stochastic_volatility.csv  sum.csv  sum_eval.csv  sum_iter.csv  sum_iter_eval.csv
