add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/adept ${CMAKE_CURRENT_BINARY_DIR}/adept)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/adolc ${CMAKE_CURRENT_BINARY_DIR}/adolc)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/baseline ${CMAKE_CURRENT_BINARY_DIR}/baseline)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/cppad ${CMAKE_CURRENT_BINARY_DIR}/cppad)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/fastad ${CMAKE_CURRENT_BINARY_DIR}/fastad)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/sacado ${CMAKE_CURRENT_BINARY_DIR}/sacado)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/stan ${CMAKE_CURRENT_BINARY_DIR}/stan)
